# cell_mesh_2

./: CMakeLists.txt  LICENSE  README.md
docs/: metabolism_model.md  notes.md
examples/: config.yaml
src/: cell.cpp  cell.h  main.cpp  openmp.cpp  openmp.h  qvm_cm2.cpp  qvm_cm2.h
